# docs/swagger.json
@@ -15,14 +15,17 @@
         },
         "version": "1.0"
     },
-    "host": "127.0.0.1:9999",
+    "host": "localhost:9999",
     "basePath": "/",
     "paths": {
         "/backend/upload_video": {
             "post": {
                 "description": "上傳 mp4 影片",
-                "produces": [
+                "consumes": [
                     "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
                 ],
                 "tags": [
                     "Video"
@@ -32,7 +35,7 @@
                     {
                         "type": "file",
                         "description": "影片檔",
-                        "name": "video",
+                        "name": "file",
                         "in": "formData",
                         "required": true
                     }
